Partial Dark Mode fix

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ body {
     background: #000000;
   }
 
+  a {
+    color: white;
+  }
+
   a#box {
     color: white;
   }
@@ -49,7 +53,7 @@ body {
     color: white;
     background-color: rgb(255,255,255, 0.15);
   }
-  
+
   a#mini {
     color: white;
     border-bottom: thin solid rgb(255,255,255,0.2);
@@ -477,7 +481,7 @@ a#box:hover {
 
 a#mini {
   text-decoration: none;
-  color: #000000;
+  /* color: #000000; */
   font-size: 1rem;
   margin: 0.75em 0;
   font-weight: 700;
